--- a/src/styles.css
+++ b/src/styles.css
@@ -119,3 +119,14 @@ body {
 .dropdown-menu a:hover {
   text-decoration: underline;
 }
+
+.bg {
+  width: 100vw;
+  height: 100vh;
+  object-fit: cover;
+  object-position: center;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: -1;
+}
